--- a/deployment.yml
+++ b/deployment.yml
@@ -18,4 +18,4 @@ spec:
               image: zhanlianguf/go-api-skeleton:v1
               imagePullPolicy: IfNotPresent
               ports:
-                - containerPort: 80 # number of port to be exposed on the pod's IP address
+                - containerPort: 3000 # number of port to be exposed on the pod's IP address. What is a good port number for pods?
