--- a/service.yml
+++ b/service.yml
@@ -5,8 +5,7 @@ kind: Service
 metadata:  
     name: go-api-skeleton
 spec:
-    type: NodePort # "NodePort" builds on ClusterIP and allocates a port on every node which routes to the same endpoints as the clusterIP.
-    ports:
+    type: LoadBalancer # "LoadBalancer" builds on NodePort and creates an external load-balancer (if supported in the current cloud) which routes to the same endpoints as the clusterIP.
     - name: http
       port: 80 # the port that will be exposed by the service
       targetPort: 3000 # number of the port to access on the pods targeted by the service
