debugged minikube, eventually just restarted docker desktop service which includes docker engine, docker engine is the driver for minikube and also changed port number to match the code listener and serve

--- a/service.yml
+++ b/service.yml
@@ -9,5 +9,6 @@ spec:
     ports:
     - name: http
       port: 80 # the port that will be exposed by the service
+      targetPort: 80 # number of the port to access on the pods targeted by the service
     selector: # Route service traffic to pods with label keys and values matching this selector
       app: go-api-skeleton
