--- a/deployment.yml
+++ b/deployment.yml
@@ -36,9 +36,9 @@ spec:
     spec:
       containers:
       - name: jenkins
-        image: jenkins/jenkins:lts-jdk11
+        image: jenkins/jenkins
         ports:
-        - containerPort: 4000
+        - containerPort: 8080
         volumeMounts:
         - name: jenkins-home
           mountPath: /var/jenkins_home
