Switch to stable jenkins image DID: Look at logs in previous containers -> Will need to delete logs and transfer to more stable place overtime. Looked at master-slave jenkins architecture -> move to clusterIP for master and slave

--- a/deployment.yml
+++ b/deployment.yml
@@ -36,7 +36,7 @@ spec:
     spec:
       containers:
       - name: jenkins
-        image: jenkins/jenkins
+        image: jenkins/jenkins:lts-jdk11
         ports:
         - containerPort: 8080
         volumeMounts:
