--- a/jenkins/pv.yml
+++ b/jenkins/pv.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: jenkins-pv
+  name: jenkins
   namespace: jenkins
 spec:
   storageClassName: jenkins-pv
@@ -11,4 +11,4 @@ spec:
     storage: 20Gi
   persistentVolumeReclaimPolicy: Retain
   hostPath:
-    path: /data/jenkins-volume/
+    path: /data/pv1/
